Open-MX 1.1.902 aka 1.2-rc2 ()
============================================================

Bug fixes:
* Redirect omxoed errors to /var/log/omxoed.log so that we can
  avoid hangs when running omx_init through ssh.
* Fix build with the intel compiler icc.
* Fix build with against 2.6.32 kernels.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 1.1.901 aka 1.2-rc1 (September 23rd 2009, svn r2757)
============================================================
The OpenMPI regcache release.

Major improvements from previous release:
* Implement mx__regcache_clean() properly so that OpenMPI forcing
  MX_RCACHE=2 does not cause data corruption.
* Use dlmalloc internally so that OpenMPI cannot cause deadlock by
  trying to cleanup the regcache when it intercept Open-MX internal
  allocations. --disable-internal-malloc may disable it.

Bug fixes:
* Fix the truncating of medium messages on the receive side so as to
  not write outside of the receive buffer.
* Fix the transferred length reported on the sender when discarding
  a large message in the unexpected handler.
* Fix some potential aliasing problems in the library.

Other improvements from previous release:
* Pass the medium message data to the unexpected handler when a single
  fragment is used, as MX does.
* Report information about all boards by default in omx_counters and
  omx_endpoint_info.
* Add OMX_IGNORE_MX_ENV environment variable to disable MX environment
  variables.
* Improve kernel detection and configuration messages.
* Misc coding-style, tools and documentation improvements.

Open-MX 1.1.1 (August 3rd 2009, svn/open-mx-1.1.x r2693)
========================================================
The multirail release.

Bug fixes:
* Change the reverse peer index table into a per-interface table to
  prevent messages from being delivered to the wrong boards in some
  multirail configurations.